--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 
 			<div class = "content">
 			<div class="servicesBx">
-				<img src = "check.png">
+				<img src = "mobile.png">
 				<h2><br>Download the App</h2>
 				<p>
 				Head to the iOS or Android app store to download our mobile application and set it up with your mobile phone or email address.
 				</p>
 			</div>
 			<div class="servicesBx">
-			<img src = "check.png">
+			<img src = "tasks.png">
 				<h2><br>Select Tasks</h2>
 				<p>
 					Choose what task(s) you’d like completed from our pre-curated list. We’ll match you to the best tasker for the job.
 				</p>
 			</div>
 			<div class="servicesBx">
-				<img src = "check.png">
+				<img src = "location.png">
 				<h2><br>Set Location</h2>
 				<p>
 				Enter your address or pin your location on the map and we’ll give you the approximate time it’ll take for one of our taskers to come right to you.
@@ -69,7 +69,7 @@
 			
 			</div>
 			<div class="servicesBx">
-				<img src = "check.png">
+				<img src = "pay.png">
 				<h2><br>Pay and Rate</h2>
 				<p>
 				After the tasks have been completed, pay your tasker and review them. Your input helps us provide our customers the highest quality service.
@@ -124,21 +124,21 @@
 		</div>
 		<div class = "content">
 			<div class="servicesBx">
-				<img src = "check.png">
+				<img src = "setup.png">
 				<h2><br>Set Up</h2>
 				<p>
 				Download our app and fill out your information for a quick background check. You’ll receive your results within the week and then can start doing tasks.
 				</p>
 			</div>
 			<div class="servicesBx">
-			<img src = "check.png">
+			<img src = "details.png">
 				<h2><br>View Task Details</h2>
 				<p>
 					Find tasks in your area and view the details of the job including the location and tasks needing to be completed.
 				</p>
 			</div>
 			<div class="servicesBx">
-				<img src = "check.png">
+				<img src = "paid.png">
 				<h2><br>Get Paid</h2>
 				<p>
 				Once you select and complete a task, you’ll be paid right away within our app. There’s no waiting.
@@ -146,7 +146,7 @@
 			
 			</div>
 			<div class="servicesBx">
-				<img src = "check.png">
+				<img src = "feedback.png">
 				<h2><br>Feedback</h2>
 				<p>
 				View your ratings and customer feedback. Our customers will be able to tip your directly as well as give compliments.
@@ -219,7 +219,7 @@
 			<ul>
 				<li class="active">
 				<a href="https://forms.gle/3ocRY14WwvnLjNYq5" target = "_blank">JOIN WAITLIST</a></li>
-				<li><a href="https://forms.gle/SXzLRvWeZcsT5bwH9" target = "_blank">Tasker Sign Up</a></li>
+				<!--<li><a href="https://forms.gle/SXzLRvWeZcsT5bwH9" target = "_blank">Tasker Sign Up</a></li>-->
 				<li><a href="#">Terms & Privacy</a></li>
 				<li><a href="#">Career</a></li>
 				<li><a href="mailto:cordfounders@gmail.com?subject=">Contact</a></li>
